# test_area

./: .gitignore  .gitmodules  Makefile  Makefile_single_binary
CPPUnitEx/: cppunit_examples.txt  main.cpp
CPPUnitEx/course/: Course.cpp
CPPUnitEx/full_ex_w_testFactory/: ComplexNumberTest.cpp  main.cpp
CPPUnitEx/simple/: ComplexNumberTest.h
asdf_builds/apitesting_arjan_codes/: .tool-versions  pyproject.toml
cmake_builds/curl_and_variants/: CMakeLists.txt  build.sh
cmake_builds/curl_and_variants/src/: main.cpp
cmake_builds/nlohmann_conan_test/: CMakeLists.txt  CMakeUserPresets.json  conan_install_deps.sh  conanfile.txt
cmake_builds/nlohmann_conan_test/src/: main.cpp
enumAndStructEx/: enum.hpp  main.cpp
enumClassToInt/: MibVariables.hpp  SnmpTypes.hpp
make_builds/: NoThreadMakefile
make_builds/CPPUnitEx/: main.cpp
make_builds/CPPUnitEx/course/: TestStudent.cpp  (+1 more)
make_builds/bitManipulation/: bitManip.cpp
make_builds/enumClassToInt/: main.cpp
make_builds/template_specialization_class_member/: classTest.hpp  main.cpp
make_builds/threadEx/: threadEx.cpp
make_builds/typeTraitTest/: README.md
multimap_test/: multimap.cpp
nonCopyClass/: main.cpp
parseCommaStringToVector/: main.cpp
priority_q/: priority_q.cpp
shimLibEx/abiSharedLib/: README.md  shimTest.cpp
shimLibEx/interceptShim/: shimLib.cpp
src/: cpptest.cpp  enum.hpp  main.cpp  register_test.cpp  register_test.hpp  structs.hpp
template_specialization_class_member/: classTest.cpp
test/: ComplexNumberTest.cpp  ComplexNumberTest.h
test/simple/: ComplexNumberTest.cpp  main.cpp
(+17 files in other folders)
